Change default imagePullPolicy to Always

--- a/deployment.yaml
+++ b/deployment.yaml
@@ -23,6 +23,7 @@ spec:
     spec:
       containers:
       - image: sovryn/redash-proxy
+        imagePullPolicy: Always
         name: redash-proxy
         resources: {}
         terminationMessagePath: /dev/termination-log
